improve and fix schem loading, exporting sorta working
better UX, slight optimizations.
export phases desperately need optimizations and multi threading.
export currently has a bug where the world version is wrong, will fix this soon but an annoying hack is downgraded the exported world with chunker fixes it.